# nextauri

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
examples/chat/: README.md  package.json  tsconfig.json
examples/chat/app/: globals.scss  layout.tsx  page.tsx
examples/chat/tauri/: Cargo.toml  tauri.conf.json
examples/chat/tauri/src/: lib.rs  main.rs
